--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,7 +8,6 @@ dependencies = [
     "cryptography>=45.0.6",
     "fastapi>=0.116.1",
     "gunicorn>=23.0.0",
-    "mysql-connector-python>=9.4.0",
     "openai>=1.98.0",
     "pandas>=2.3.1",
     "python-dotenv>=1.1.1",
@@ -24,3 +23,9 @@ dependencies = [
 [tool.setuptools]
 
 packages = ["athena_eye_project"]
+
+[project.optional-dependencies]
+dev = [
+    "httpx>=0.28.1",
+    "pytest>=8.4.1",
+]
