--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -57,7 +57,7 @@ services:
     # 1. 移除 'volumes'：不再将本地代码挂载到容器中。镜像是自包含的、不可变的。
     # 2. 移除 'ports'：不再直接将8000端口暴露给外界，所有流量都应通过Nginx反向代理。
     # 3. 修改 'command'：使用更稳定的gunicorn作为WSGI服务器来运行FastAPI应用。
-    command: ["gunicorn", "-k", "uvicorn.workers.UvicornWorker", "-w", "4", "-b", "0.0.0.0:8000", "athena_eye_project.main_api:app"]
+    command: ["gunicorn", "-k", "uvicorn.workers.UvicornWorker", "-w", "1", "-b", "0.0.0.0:8000", "--timeout", "120", "athena_eye_project.main_api:app"]
 
   # --- 【新增】前端与反向代理服务 (Nginx) ---
   frontend:
