fix the bugs:系统设置页面。邮件发送由股价触发。

--- a/.gitignore
+++ b/.gitignore
@@ -16,10 +16,12 @@ __pycache__/
 
 # Runtime Generated Files
 logs/
+test/
 archive/
 backend/logs/
 backend/archive/
 backend/data/
+frontend/logs/
 
 # Frontend Build Artifacts
 frontend/node_modules/
